added landing page

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,55 @@
 <p>This is the about view.</p>
+<!--<section class="portfolio" id="portfolio">-->
+    <!--<div class="container-fluid ">-->
+        <!--<div class="row">-->
+            <!--<div class="col-md-12 no-padding ">-->
+                <!--<div class="section-title st-center">-->
+                    <!--&lt;!&ndash; <h3>International Names</h3> &ndash;&gt;-->
+                    <!--<p>International Drug Directory</p>-->
+                <!--</div>-->
+                <!--<div class="filter mb40">-->
+                    <!--<form id="filter">-->
+                        <!--&lt;!&ndash; <fieldset class="group">-->
+                            <!--<label class="btn btn-default btn-main"><input type="radio" name="filter" value="all" checked="checked">All</label>-->
+                            <!--<label class="btn btn-default"><input type="radio" name="filter" value="photography">Photography</label>-->
+                            <!--<label class="btn btn-default"><input type="radio" name="filter" value="design">Design</label>-->
+                            <!--<label class="btn btn-default"><input type="radio" name="filter" value="codding">Codding</label>-->
+                        <!--</fieldset> &ndash;&gt;-->
+                    <!--</form>&lt;!&ndash; #filter &ndash;&gt;-->
+                <!--</div>&lt;!&ndash; .filter .mb40 &ndash;&gt;-->
+
+                <!--<div class="grid shuffle" style="position: relative; overflow: hidden; transition: height 250ms ease-out; height: 220px;">-->
+                    <!--<figure class="portfolio-item shuffle-item filtered" data-groups="[&quot;photography&quot;]" style="position: absolute; top: 0px; left: 0px; visibility: visible; transition: transform 250ms ease-out, opacity 250ms ease-out;">-->
+                        <!--<img src="photos/portfolio.jpg" alt="">-->
+                        <!--<figcaption>-->
+                            <!--<h2>Tylenol</h2>-->
+                            <!--<p>Paracetamol</p>-->
+                        <!--</figcaption>-->
+                    <!--</figure>-->
+                    <!--<figure class="portfolio-item shuffle-item filtered" data-groups="[&quot;design&quot;]" style="position: absolute; top: 0px; left: 0px; transition: transform 250ms ease-out, opacity 250ms ease-out; visibility: visible; opacity: 1; transform: translate3d(208px, 0px, 0px) scale3d(1, 1, 1);">-->
+                        <!--<img src="photos/portfolio2.jpg" alt="">-->
+                        <!--<figcaption>-->
+                            <!--<h2>Benadryl<span></span></h2>-->
+                            <!--<p>Polaramine</p>-->
+                        <!--</figcaption>-->
+                    <!--</figure>-->
+                    <!--<figure class="portfolio-item shuffle-item filtered" data-groups="[&quot;photography&quot;]" style="position: absolute; top: 0px; left: 0px; transition: transform 250ms ease-out, opacity 250ms ease-out; visibility: visible; opacity: 1; transform: translate3d(416px, 0px, 0px) scale3d(1, 1, 1);">-->
+                        <!--<img src="photos/portfolio3.jpg" alt="">-->
+                        <!--<figcaption>-->
+                            <!--<h2>Doryx</h2>-->
+                            <!--<p>Doxiciclina</p>-->
+                        <!--</figcaption>-->
+                    <!--</figure>-->
+                    <!--<figure class="portfolio-item shuffle-item filtered" data-groups="[&quot;design&quot;]" style="position: absolute; top: 0px; left: 0px; transition: transform 250ms ease-out, opacity 250ms ease-out; visibility: visible; opacity: 1; transform: translate3d(0px, 110px, 0px) scale3d(1, 1, 1);">-->
+                        <!--<img src="photos/portfolio4.jpg" alt="">-->
+                        <!--<figcaption>-->
+                            <!--<h2>Benadryl<span></span></h2>-->
+                            <!--<p>Polaramine</p>-->
+                        <!--</figcaption>-->
+                    <!--</figure>-->
+                <!--</div>-->
+
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</section>-->
