--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,20 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
+<div class="header-description text-center">
+  <div class="header-content animated">
+    <h1 class="heading">Travel Bae</h1>
+    <p class="heading-subtitle">
+      Health Information for Your Vacation
+    </p>
+  </div> <!-- /.header-content -->
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
+  <div class="wow zoomIn button-down" data-wow-duration="1s" data-wow-offset="100">
+    <div class="wow tada" data-wow-delay="1s" data-wow-duration="1s">
+      <div class="wow rubberBand" data-wow-delay="2000ms" data-wow-duration="1s">
+        <div class="wow pulse" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">
+          <button class="btn btn-primary" role="button">Check it Out</button>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
 
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div> <!-- /.header-description -->
